--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ verify_ssl = true
 requests = "*"
 pandas = "*"
 xlrd = "*"
+sqlalchemy = "*"
+pymysql = "*"
+ipykernel = "*"
 
 [requires]
 python_version = "3.8"
